More updates and final tweaks

--- a/sitemap.html
+++ b/sitemap.html
@@ -34,7 +34,7 @@
 	<div class="header_container">
 		<div class="header clearfix">
 			<div class="header_left">
-				<a href="index.html" title="A.C.T Tree Felling"></a>
+				<a href="/" title="A.C.T Tree Felling"></a>
 			</div>
 			<div class="top_hint">
 				<span style="color:#5da370">southside</span> 6281 2687&nbsp;&nbsp;&nbsp;<span style="color:#5da370">northside</span> 6162 2678&nbsp;&nbsp;&nbsp;<a class="more black icon_small_arrow margin_right_white title" href="contact.html#request" title="Request a Quote">REQUEST A QUOTE</a>
@@ -42,7 +42,7 @@
 			<div class="menu-main-menu-container">
 				<ul class="sf-menu header_right" id="menu-main-menu">
 					<li class="menu-item">
-						<a href="index.html">HOME</a>
+						<a href="/">HOME</a>
 					</li>
 					<li class="menu-item about">
 						<a href="about.html">ABOUT</a>
@@ -69,7 +69,7 @@
 					<a href="#nav" title="Show navigation">Show navigation</a>
 					<a href="#" title="Hide navigation">Hide navigation</a>
 					<ul class="clearfix">
-						<li><a href="index.html">Home</a></li>
+						<li><a href="/">Home</a></li>
 						<li><a href="about.html">About Us</a></li>
 						<li><a href="services.html">Services</a></li>
 						<li><a href="faq.html">FAQ</a></li>
@@ -100,7 +100,7 @@
 					<div class="description full first">
 						<ul>
                             <li>
-                                <a href="/index.html">Home</a>
+                                <a href="/">Home</a>
                             </li>
                             <li>
                                 <a href="/about.html">About</a>
